--- a/www/partials/addpatient/plan/exercise.html
+++ b/www/partials/addpatient/plan/exercise.html
@@ -1,13 +1,13 @@
 <ion-view view-title="锻炼">
-<ion-nav-bar class="bar-positive">
-	<ion-nav-buttons side="primary">
-		<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
-		</button>
-	</ion-nav-buttons>
-	<!-- <ion-nav-buttons side="secondary">
-		<a class="button" ng-click="ShowIcon()">编辑</a>		
-	</ion-nav-buttons> -->
-</ion-nav-bar>
+	<ion-nav-bar class="bar-positive">
+		<ion-nav-buttons side="primary">
+			<button class="button button-icon ion-arrow-left-c" ng-click="onClickBackward()">
+			</button>
+		</ion-nav-buttons>
+		<ion-nav-buttons side="secondary">
+			<button class="button" ng-click="Confirm()" ng-if="isloaded">保存</button>
+		</ion-nav-buttons>
+	</ion-nav-bar>
 	<div class="bar-shadow"></div>
 	<ion-content>
 		<div class="list">
@@ -20,13 +20,6 @@
 				    <i class="icon ion-edit"></i>	
 				</div>						
 			</div>
-		</div>
-
-
-        <div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()" ng-if="isloaded">
-			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
-			</button>
-		</div>
+		</div>       
 	</ion-content>
 </ion-view>
