--- a/www/partials/managepatient/plan/healthEducation.html
+++ b/www/partials/managepatient/plan/healthEducation.html
@@ -4,6 +4,9 @@
 			<button class="button button-icon ion-arrow-left-c" ng-click="Confirm()">
 			</button>
 		</ion-nav-buttons>
+		<ion-nav-buttons side="secondary">
+			<button class="button" ng-click="Confirm()" ng-if="isloaded">保存</button>
+		</ion-nav-buttons>
 	</ion-nav-bar>
 	<div class="bar-shadow"></div>
 	<ion-content>
@@ -14,11 +17,6 @@
 	        	<i class="icon ion-ios-checkmark-empty"></i>
 	        </div>
         	</a>
-        </div>
-        <div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()" ng-if="isloaded">
-			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
-			</button>
-		</div>		
+        </div>	
 	</ion-content>
 </ion-view>
