同步，插的数据库换了，现在改过，信息量小的就诊id输入同步之后能够刷新出 新的就诊信息列表，就是大概好用了
Signed-off-by: hsnowman <824235172@qq.com>

--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -43,7 +43,7 @@
 				</label> -->
 				<label class="item item-input" >
               <span class="input" style="margin-right:16px"><b>ID</b></span>
-              <input type="text" ng-model="HJZYYID" placeholder="就诊ID" >
+              <input type="text" ng-model="basicclinicinfo.HJZYYID" placeholder="就诊ID" >
             </label>
 			
 		</div>
