--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -1,4 +1,4 @@
-<ion-view title="现有病人">
+<ion-view title="现有病人" ng-controller="myPatientCtrl">
 
   <ion-header-bar align-title="middle" class="bar-positive">
     <div class="buttons">
@@ -7,7 +7,7 @@
     <h1 class="title">现有病人</h1>
         <div class="buttons">
       <!-- <a class="button  button-outline button-light" ng-click="popover.show($event)">筛选</a> -->
-      <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a>
+      <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a>
     </div>
 <!--     <div class="buttons">
       <button class="button button-icon icon ion-search" ng-click="openSearch()"></button>
@@ -19,8 +19,8 @@
       <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()"></button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-      <!-- <a class="button button-outline button-light" ng-click="popover.show($event)">筛选</a> -->
-      <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a>
+      <!-- <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a> -->
+      <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a>
     </ion-nav-buttons>
 <!--     <ion-nav-buttons side="right">
       <button class="button button-icon icon ion-search " ng-click="openSearch()"></button>
@@ -29,22 +29,22 @@
   <div class="bar bar-subheader item-input-inset bar-light">
     <div class="item-input-wrapper">
       <i class="icon ion-android-search placeholder-icon"></i>
-      <input type="search" ng-focus="saveNow()" ng-model="query.PatientName" ng-change="startSearch(query)" placeholder="搜索姓名">
-      <i class="icon ion-android-close placeholder-icon" ng-hide="clearIt" ng-click="clearSearch()"></i>
+      <input type="search" ng-model="query.PatientName" ng-change="startSearch(query)" placeholder="搜索姓名">
+      <i style="color:#EF473A;font-size:1.4em" class="icon ion-android-close placeholder-icon" ng-hide="clearIt" ng-click="clearSearch()"></i>
     </div>
+    <!-- <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a> -->
   </div>  
-  <div ng-click="scrollTop()" ng-touch="fade" ng-style="needtoTop" class="text-center" style="position: absolute;bottom:60px;right:15px;z-index:100;display:block;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:0px 2px 3px #888;">
+  <div ng-click="scrollTop()"  class="text-center" style="opacity:0.4;position: absolute;bottom:60px;right:15px;z-index:100;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:0px 2px 3px #999;">
     <i style="font-size:3.2em;color:#FFF" class="icon ion-android-arrow-up"></i>
   </div>
   <div class="sub-bar-shadow"></div>
   <ion-content delegate-handle="myPatientScroll" class="has-subheader content-item-list" on-scroll="onScoll()">   
-  
     <ion-refresher on-refresh="doRefresh()"></ion-refresher>
     <ion-list> 
     <!-----！！ion-item里的注释勿动 IMPORTANT！！---------------------------->
       <div  collection-repeat="patient in patients |filter:byRange() " collection-item-height="105px"  ng-click="PIDdetail(patient)" >
       <ion-item class="item-thumbnail-left item-margin ">
-        <img src="{{patient.photoAddress}}">
+        <img ng-src="{{patient.photoAddress}}">
         <div style=" padding-left:84px">
         <div class="row">
           <!-- <div class="col-10 "><div class="row"><h2>类别</h2><br></div><div class="row"><h2>消息</h2></div></div>  -->
@@ -52,8 +52,8 @@
             <!-- <div class="row"> -->
               <div class="col-75">
                 <div class="row " style="padding-right:0">
-                  <div class="col-67"><h5><!--<i class="icon ion-chevron-right"></i>-->  {{patient.PatientName}}</h5></div>
-                  <div class="col-33"><h6 >{{patient.Age}}岁      {{patient.GenderText[0]}}</h6></div>
+                  <div class="col-67"><h5><!--<i class="icon ion-chevron-right"></i>-->  {{patient.PatientName}}<span class="badge1">12</span></h5></div>
+                  <div class="col-33"><h6 >{{patient.Age}}   {{patient.GenderText[0]}}</h6></div>
                 </div>
                 <div class="row">
                   <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p></div>
@@ -70,13 +70,13 @@
                 </div>
               </div>  
             </div>
-            <div class="row">
-          <!-- <div class="col-25"> -->
-          <p style="margin:0 2px 0 5px;width:60px" ><i class="icon ion-arrow-graph-up-right"></i> 进度 </p>
-          <!-- </div> -->
-          <div  style="background-color:#E6E6E6; border:#DDDDDD 1px solid;width:100%">
-          <div ng-style="setwidth(patient.Process)" class="processbar"><p style="color:#FFFFFF;text-align:right">{{patient.Process}}%</p></div>
-          </div>
+            <div ng-hide="{{patient.Status}}" class="row">
+              <!-- <div class="col-25"> -->
+              <p style="margin:0 2px 0 5px;width:60px" ><i class="icon ion-arrow-graph-up-right"></i> 进度 </p>
+              <!-- </div> -->
+              <div  style="background-color:#E6E6E6; border:#DDDDDD 1px solid;width:100%">
+              <div ng-style="setwidth(patient.Process)" class="processbar"><p style="color:#FFFFFF;text-align:right">{{patient.Process}}%</p></div>
+              </div>
         
             </div>
           </div>
