--- a/www/css/style.css
+++ b/www/css/style.css
@@ -26,10 +26,10 @@
   color: #417D9A;
 }
 
-.item-thumbnail-left img {
+/*.item-thumbnail-left img {
   padding:0 !important;
 
-}
+}*/
 .item-row{
   display: -webkit-box;
   display: -webkit-flex;
@@ -43,7 +43,6 @@
 
 .processbar{
 	background-color:#3aa7dd;
-  /*background-color:#efffc1;*/
 	height:100%;
 }
 
@@ -155,7 +154,7 @@
   position: absolute;
   top: 39px;
   z-index:99;
-  opacity:0.6;
+  opacity:0.4;
   display: block;
   -moz-box-shadow:0px 4px 5px #999;
   -webkit-box-shadow:0px 4px 5px #999;
@@ -167,11 +166,11 @@
   position: absolute;
   top: 85px;
   z-index:99;
-  opacity:0.6;
+  opacity:0.5;
   display: block;
-  -moz-box-shadow:0px 3px 4px #888;
-  -webkit-box-shadow:0px 3px 4px #888;
-  box-shadow:0px 3px 4px #888;
+  -moz-box-shadow:0px 3px 4px #999;
+  -webkit-box-shadow:0px 3px 4px #999;
+  box-shadow:0px 3px 4px #999;
   width: 100%;height:3px;
   background-color: transparent; 
 }
@@ -181,12 +180,30 @@
   z-index:99;
   opacity:0.5;
   display: block;
-  -moz-box-shadow:0px -3px 4px #888;
-  -webkit-box-shadow:0px -3px 4px #888;
-  box-shadow:0px -3px 4px #888;
+  -moz-box-shadow:0px -3px 4px #999;
+  -webkit-box-shadow:0px -3px 4px #999;
+  box-shadow:0px -3px 4px #999;
   width: 100%;height:3px;
   background-color: transparent; 
 }
+.badge1 {
+ /* background-color: transparent;*/
+  /*color: #AAAAAA;*/
+  z-index: 1;
+  display: inline-block;
+  padding: 4px 4px;
+  /*min-width: 10px;*/
+  border-radius: 8px;
+  vertical-align: text-top;
+  text-align: center;
+  white-space: nowrap;
+  /*font-weight: bold;*/
+  font-size: 5px;
+  line-height: 7px; 
+  background-color: #ef473a;
+  color: #fff;}
+  .badge1:empty {
+    display: none; }
 .icon-gray{
   color:#AAAAAA;
 }
