--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -34,7 +34,7 @@
     </div>
     <!-- <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a> -->
   </div>  
-  <div ng-click="scrollTop()"  class="text-center" style="opacity:0.4;position: absolute;bottom:60px;right:15px;z-index:100;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:0px 2px 3px #999;">
+  <div ng-click="scrollTop()" ng-touch="needopacity"  class="text-center" style="opacity:0.4;position: absolute;bottom:60px;right:15px;z-index:100;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:0px 2px 3px #999;">
     <i style="font-size:3.2em;color:#FFF" class="icon ion-android-arrow-up"></i>
   </div>
   <div class="sub-bar-shadow"></div>
