--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -6,8 +6,8 @@
   </ion-header-bar>
   <div class="bar bar-subheader item-input-inset bar-light" style="padding:0px !important">
 
-      <a class="item col-33 text-center" ng-click="openpopover($event,0)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a>
-      <a class="item col-33 text-center" ng-click="openpopover($event,1)">{{f.Status}} <i class="icon ion-android-arrow-dropdown"></i></a>
+      <a ng-style="select1" class="item col-33 text-center" ng-click="openpopover($event,0)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a>
+      <a ng-style="select2" class="item col-33 text-center" ng-click="openpopover($event,1)">{{f.Status}} <i class="icon ion-android-arrow-dropdown"></i></a>
       <!-- <a class="item col-33 text-center" ng-click="popover1.show($event)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a> -->
       <!-- <a class="item col-33 text-center" ng-click="popover.show($event)">{{f.status}} <i class="icon ion-android-arrow-dropdown"></i></a> -->
       <a class="item col-33 text-center">WHATEVER <i class="icon ion-android-arrow-dropdown"></i></a>
@@ -19,7 +19,7 @@
       <ion-item ng-repeat="patient in patients track by $index" class="item-thumbnail-left item-margin" ng-click="viewDetail(patient)" >
         <img src="{{patient.imageURL}}">
         <!-- <div Style="padding-top:10px"> -->
-            <div class="item-row " style="padding-top:10px">
+            <div class="item-row " >
               <div class="col-50"><h5><!--<i class="icon ion-chevron-right"></i>-->  {{patient.name}} </h5></div>
               <div class="col-50"><h6>{{patient.Age}}      {{patient.GenderText}}</h6></div>
             </div>
@@ -27,9 +27,14 @@
               <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p></div>
             </div>               
             <div class="item-row">
-              <div class="col-100"><p><i class="icon ion-calendar"></i> {{patient.AppointmentText}} {{patient.ApplyTime}}</p></div>
+              <div class="col-100"><p><i class="icon ion-calendar"></i> {{patient.AppointmentText}} <span style="font-style: italic">{{patient.ApplyTime}}</span></p></div>
               <!-- <div class="col-50"><p></p></div> -->
             </div>
+            <div ng-if="(patient.AppointmentStatus-0)" class="item-row">
+              <div ng-if="!(patient.AppointmentStatus-1)" class="col-100"><p style="color:#fb6a1b"> <b >约定时间</b> <span style="font-style: italic">{{patient.AppointmentTime}}</span></p></div>
+              <div ng-if="(patient.AppointmentStatus-1)" class="col-100"><p style="color:#33cd5f"> <b >已约定</b> <span style="font-style: italic">{{patient.AppointmentTime}}</span></p></div>
+              <!-- <div class="col-50"><p></p></div> -->
+            </div>            
             <!-- <div class="item-row"> -->
               <!-- <div class="col-100"><p>“{{patient.Description}}”</p></div> -->
               <!-- <div class="col-50"><p></p></div> -->
