有新消息跳转chat页面，去掉了多余state：coach.i。有无计划的显示反了，已修改

--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -1,9 +1,9 @@
 <ion-view title="新患者">
-  <ion-header-bar class="bar-positive">
+<!--   <ion-header-bar class="bar-positive">
     <h2 class="title">Patient List</h2>
     <button class ="button button-icon ion-minus-circled" ng-click ="data.showDelete = !data.showDelete; showReorder = false;"></button>
     <button class ="button button-icon ion-navicon" ng-click ="data.showReorder = !data.showReorder; showDelete = false;"></button>
-  </ion-header-bar>
+  </ion-header-bar> -->
   <div class="bar bar-subheader item-input-inset bar-light" style="padding:0px !important">
 
       <a ng-style="select1" class="item col-33 text-center" ng-click="openpopover($event,0)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a>
