--- a/www/partials/managepatient/chat-detail.html
+++ b/www/partials/managepatient/chat-detail.html
@@ -10,9 +10,10 @@
     </ion-nav-buttons>
   </ion-nav-bar>
     <ion-content class="padding" start-y="120">
-        <div style="position:relative;bottom:{{Dialog.SMSbottom}};top:20px">
+        <div style="position:relative;bottom:{{Dialog.SMSbottom}}">
             <ion-refresher pulling-text="下拉加载更多。。。" spinner='ripple' refreshing-text="努力加载中" on-refresh="DisplayMore()">
             </ion-refresher>
+            <br><br> 
             <div ng-repeat="item in Dialog.DisplayOnes">
                 <my-smsdrt time="{{item.Time}}" content="{{item.Content}}" type="{{item.IDFlag}}" face="{{item.IDFlag === 'Send' && myImage || imageURL}}"></my-smsdrt> 
             </div>
