--- a/www/partials/addpatient/riskdetail.html
+++ b/www/partials/addpatient/riskdetail.html
@@ -59,12 +59,12 @@
           <p>{{ item.M1.Result }}</p>
           
           
-          <h3>风险详情</h3>  
-          <p>高血压发病率  {{ item.M1.f1 }} </p>
-          <p>高血压五年死亡率   {{ item.M1.f2 }}</p>
-          <p>心血管疾病   {{ item.M1.f3 }}</p>
-          <p>中风十年发生率   {{ item.M1.f4 }}</p>
-          <p>心衰率   {{ item.M1.f5 }}</p>
+          <h3>我们的风险评估结果显示您的</h3>  
+          <p>高血压发病率     {{item.M1.f1 }} </p>
+          <p>高血压五年死亡率  {{item.M1.f2 }}</p>
+          <p>心血管疾病       {{item.M1.f3 }}</p>
+          <p>中风十年发生率    {{item.M1.f4 }}</p>
+          <p>心衰率           {{item.M1.f5 }}</p>
 
         </div>
       </div>
@@ -79,8 +79,9 @@
         </div>
         <div class="item item-text-wrap">
             <h3>糖尿病等级说明</h3>
-            {{item.M2.Result}}
-            {{item.M2.Period}}  {{item.M2.Glucose}} mmol/L
+            <p>{{item.M2.Result}}</p>
+            <p>{{item.M2.Period}}</p> 
+            <p>{{item.M2.Glucose}} mmol/L</p> 
         </div>
     </div>
   </div>
@@ -93,8 +94,11 @@
         <h2>心衰风险描述</h2>
       </div>
       <div class="item item-text-wrap">
-          <h3>心衰等级说明</h3>
-          {{item.M3.Result}}
+          <h3>NYHA心衰等级说明</h3>
+          <p>{{item.M3.Result}}</p>
+          <h3>我们的风险评估结果显示您的</h3>
+          <p>一年内心衰死亡率  {{item.M3.f1 | limitTo :4}}  ％</p>
+          <p>三年内心衰死亡率  {{item.M3.f2 | limitTo :4}}  ％</p>
           <!-- {{item.M2.Period}}  {{item.M2.Glucose}} mmol/L -->
       </div>
     </div>
