--- a/www/partials/managepatient/riskdetail.html
+++ b/www/partials/managepatient/riskdetail.html
@@ -60,11 +60,11 @@
           
           
           <h3>我们的风险评估结果显示您的</h3>  
-          <p>高血压发病率     {{item.M1.f1 }} </p>
-          <p>高血压五年死亡率  {{item.M1.f2 }}</p>
-          <p>心血管疾病       {{item.M1.f3 }}</p>
-          <p>中风十年发生率    {{item.M1.f4 }}</p>
-          <p>心衰率           {{item.M1.f5 }}</p>
+          <p>高血压发病率     {{item.M1.f1 }}  ％</p>
+          <p>高血压五年死亡率  {{item.M1.f2 }}　％</p>
+          <p>心血管疾病       {{item.M1.f3 }}　％</p>
+          <p>中风十年发生率    {{item.M1.f4 }}　％</p>
+          <p>心衰率           {{item.M1.f5 }}　％</p>
 
         </div>
       </div>
