--- a/www/partials/appointment/checkappointment.html
+++ b/www/partials/appointment/checkappointment.html
@@ -35,7 +35,14 @@
 			<label class="item item-input">
 				预约地点:<input type="text" ng-model="Add" disabled="disabled">
 			</label>
-
+			<div class ="padding">
+	  		
+				<button class="button  button-block button-primary icon-left ion-checkmark button-stable"
+						 ng-click="save()">保存</button>
+				<button class="button  button-block  button-primary icon-left ion-refresh button-stable"
+						ng-click="modify()">修改</button>
+		
+			</div>	
 		</div>
 	</ion-content>
 </ion-view>
