--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -28,7 +28,7 @@
 <ion-nav-view name="changeplan"></ion-nav-view>
 </ion-tab>
 
-<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/chat">
+<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/chat" badge="SMSCount"  badge-style="badge-assertive">
 <ion-nav-view name="chat"></ion-nav-view>
 </ion-tab>
 </ion-tabs>
