--- a/www/css/style.css
+++ b/www/css/style.css
@@ -161,26 +161,29 @@ hr.list:after {
 }
 
 .content-item-list{
-  background-color:#F3F3F3;
+  background-color:#F7F7F7;
   padding-top:0 !important;
 }
 .item-margin{
   padding:2px;
-  margin:4px;
+  margin:6px;
+  /*border-right: 0;*/
+  /*border-bottom:0;*/
+  border:0;
   /*-moz-box-shadow:1px 2px 2px #999;*/
   /*-webkit-box-shadow:1px 2px 2px #999;*/
-  box-shadow:1px 1px 2px #999;
-  /*box-shadow: 1px 1px 0px 1px #CCCCCC;*/
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  /*box-shadow:0px 0px 3px #999;*/
 }
 .bar-shadow{
   position: absolute;
-  top: 39px;
+  top: 40px;
   z-index:99;
-  opacity:0.4;
   display: block;
-  -moz-box-shadow:0px 4px 5px #999;
-  -webkit-box-shadow:0px 4px 5px #999;
-  box-shadow:0px 4px 5px #999;
+  /*-moz-box-shadow:0px 4px 5px #999;*/
+  /*-webkit-box-shadow:0px 4px 5px #999;*/
+  box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.35);
+  /*box-shadow:0px 4px 5px #999;*/
   width: 100%;height:4px;
   background-color: transparent; 
 }
@@ -188,11 +191,11 @@ hr.list:after {
   position: absolute;
   top: 85px;
   z-index:99;
-  opacity:0.3;
   display: block;
-  -moz-box-shadow:0px 3px 4px #999;
+/*  -moz-box-shadow:0px 3px 4px #999;
   -webkit-box-shadow:0px 3px 4px #999;
-  box-shadow:0px 3px 4px #999;
+  box-shadow:0px 3px 4px #999;*/
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   width: 100%;height:3px;
   background-color: transparent; 
 }
@@ -200,11 +203,11 @@ hr.list:after {
   position: absolute;
   bottom: 45px;
   z-index:99;
-  opacity:0.5;
   display: block;
-  -moz-box-shadow:0px -3px 4px #999;
-  -webkit-box-shadow:0px -3px 4px #999;
-  box-shadow:0px -3px 4px #999;
+  /*-moz-box-shadow:0px -3px 4px #999;*/
+  /*-webkit-box-shadow:0px -3px 4px #999;*/
+  /*box-shadow:0px -3px 4px #999;*/
+  box-shadow: -1px -2px 3px rgba(0, 0, 0, 0.25);
   width: 100%;height:3px;
   background-color: transparent; 
 }
