--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -4,13 +4,13 @@
     <button class ="button button-icon ion-minus-circled" ng-click ="data.showDelete = !data.showDelete; showReorder = false;"></button>
     <button class ="button button-icon ion-navicon" ng-click ="data.showReorder = !data.showReorder; showDelete = false;"></button>
   </ion-header-bar> -->
-  <div class="bar bar-subheader item-input-inset bar-light" style="padding:0px !important">
+  <div class="bar bar-subheader item-input-inset bar-light text-center" style="padding:0px ">
 
-      <a ng-style="select1" class="item col-33 text-center" ng-click="openpopover($event,0)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a>
-      <a ng-style="select2" class="item col-33 text-center" ng-click="openpopover($event,1)">{{f.Status}} <i class="icon ion-android-arrow-dropdown"></i></a>
+      <a ng-style="select1" class="item col-50 " ng-click="openpopover($event,0)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a>
+      <a ng-style="select2" class="item col-50 " style="border-right: 0px" ng-click="openpopover($event,1)">{{f.Status}} <i class="icon ion-android-arrow-dropdown"></i></a>
       <!-- <a class="item col-33 text-center" ng-click="popover1.show($event)">{{f.module}} <i class="icon ion-android-arrow-dropdown"></i></a> -->
       <!-- <a class="item col-33 text-center" ng-click="popover.show($event)">{{f.status}} <i class="icon ion-android-arrow-dropdown"></i></a> -->
-      <a class="item col-33 text-center">WHATEVER <i class="icon ion-android-arrow-dropdown"></i></a>
+      <!-- <a class="item col-33 text-center">WHATEVER <i class="icon ion-android-arrow-dropdown"></i></a> -->
   </div>
   <div class="sub-bar-shadow"></div>
   <ion-content class="has-subheader content-item-list">       
