--- a/www/partials/managepatient/table.html
+++ b/www/partials/managepatient/table.html
@@ -36,8 +36,8 @@
 
 </ion-nav-view >
 
-  <div class="footer-shadow"></div>
-<ion-tabs class="tabs-stable tabs-icon-top">
+  <!-- <div class="footer-shadow"></div> -->
+<ion-tabs style="box-shadow: -1px -2px 3px rgba(0, 0, 0, 0.25)" class="tabs-stable tabs-icon-top">
 <ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 
 </ion-tab>
@@ -54,7 +54,7 @@
 
 </ion-tab>
 
-<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/message">
+<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/message" badge="SMSCount"  badge-style="badge-assertive">
 
 </ion-tab>
 </ion-tabs>
