完成未读消息清零

--- a/www/partials/individual/filterNewpatients.html
+++ b/www/partials/individual/filterNewpatients.html
@@ -1,4 +1,4 @@
-<ion-popover-view style="width:150px" class="contentheight">
+<ion-popover-view style="width:150px;height:160px" class="contentheight">
   <ion-content scroll='true' >
     <ion-list class="text-center">
       <ion-item style="padding-top:8px;padding-bottom:0" ng-repeat="prop in props track by $index" ng-click="rankBy(prop)">
